# Hackathon_2_To_do

hackathon_2_phase_1/: .gitignore  CLAUDE.md  README.md  pyproject.toml
hackathon_2_phase_1/.claude/: settings.local.json
hackathon_2_phase_1/.specify/memory/: constitution.md
hackathon_2_phase_1/history/prompts/001-basic-todo/: 1-create-basic-todo-spec.spec.prompt.md  1-create-impl-plan.plan.prompt.md  1-create-task-list.tasks.prompt.md  1-implement-todo-app.tasks.prompt.md  2-verify-implementation.tasks.prompt.md
hackathon_2_phase_1/history/prompts/constitution/: 1-create-todo-app-constitution.constitution.prompt.md
hackathon_2_phase_1/specs/001-basic-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
hackathon_2_phase_1/specs/001-basic-todo/checklists/: requirements.md
hackathon_2_phase_1/specs/001-basic-todo/contracts/: cli-contracts.md
hackathon_2_phase_1/src/: main.py
hackathon_2_phase_1/src/cli/: interface.py
hackathon_2_phase_1/src/models/: task.py
hackathon_2_phase_1/src/services/: todo_manager.py
hackathon_2_phase_1/tests/integration/: test_cli.py
hackathon_2_phase_1/tests/unit/test_services/: test_todo_manager.py
hackathon_2_phase_3/backend/: .env.example  IMPLEMENTATION_REPORT.md  README.md  package-lock.json  package.json  pyproject.toml
hackathon_2_phase_3/backend/app/: __init__.py  config.py  main.py
hackathon_2_phase_3/backend/app/agents/: __init__.py  todo_agent.py
hackathon_2_phase_3/backend/app/core/: __init__.py  config.py  errors.py  security.py
hackathon_2_phase_3/backend/tests/: conftest.py
(+288 files in other folders)
